--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,11 @@
     </style>
 </head>
 <body>
+<a href="Mailto:test@163.com">给我发邮件</a>
+<a href="mailto:webmaster@baidu.com">给我发邮件</a>
 <a href='tel:222'>13511034063</a>
-<a href='mailto:13511034063@163.com'>13511034063</a>
+<a href="mailto:test@163.com;test1@163.com?CC=test@163.com&BCC=test@163.com&Subject=Hello&Body=你好">给我发邮件</a>
+<a href="a.docx" download="docx">下载图片</a>
+
 </body>
 </html>
