--- a/api.html
+++ b/api.html
@@ -40,7 +40,7 @@
 <body>
 <div>
     预登记页面:
-    <a href="http://ig.indata3.com/bite/1706/register.html">http://ig.indata3.com/bite/1706/register.html</a>
+    <a href="http://ig.indata3.com/bite/preregister.php">http://ig.indata3.com/bite/preregister.php</a>
 </div>
 <div>
     奖品兑换页面:
